[package]
name = "crdt_rs"
version = "0.1.2"
authors = ["Abhishek Chanda <abhishek.becs@gmail.com>"]
description = "A library to work with Conflict-free replicated data types (CRDT) in Rust"
repository = "https://github.com/achanda/crdt-rs"
keywords = ["crdt", "distributed", "library"]
license = "MIT/Apache-2.0"

[dependencies]
